<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.maps.MapsFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        map:mapId="@string/map_id"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="?attr/floatingActionButtonSmallTertiaryStyle"
        android:id="@+id/fab_myLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:src="@drawable/ic_my_location"
        android:contentDescription="@string/my_location"
        app:layout_constraintStart_toStartOf="@id/fab_save"
        app:layout_constraintEnd_toEndOf="@id/fab_save"
        app:layout_constraintBottom_toTopOf="@id/fab_save"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/Widget.Material3.FloatingActionButton.Primary"
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_check"
        android:contentDescription="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>